--- a/portfolio_art.html
+++ b/portfolio_art.html
@@ -353,6 +353,240 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 </div>
 </div>
 
+<div class="col-12 col-sm-6 col-lg-3 single_gallery_item  portrait wow fadeInUpBig" data-wow-delay="500ms">
+<a class="gallery-portrait" href="img/portfolio-img/portrait/Projet_WEB_2.jpg"><img src="img/portfolio-img/portrait/Projet_WEB_2.jpg" alt></a>
+
+<div class="gallery-content">
+<h4>Just the Two of Us</h4>
+<p>Portrait</p>
+</div>
+</div>
+  
+<div class="col-12 col-sm-6 col-lg-3 single_gallery_item  portrait wow fadeInUpBig" data-wow-delay="500ms">
+<a class="gallery-portrait" href="img/portfolio-img/portrait/Projet_WEB_3.jpg"><img src="img/portfolio-img/portrait/Projet_WEB_3.jpg" alt></a>
+
+<div class="gallery-content">
+<h4>A Moment of Forever</h4>
+<p>Portrait</p>
+</div>
+</div>
+  
+<div class="col-12 col-sm-6 col-lg-3 single_gallery_item  portrait wow fadeInUpBig" data-wow-delay="500ms">
+<a class="gallery-portrait" href="img/portfolio-img/portrait/Projet_WEB_4.jpg"><img src="img/portfolio-img/portrait/Projet_WEB_4.jpg" alt></a>
+
+<div class="gallery-content">
+<h4>The Yes Kiss</h4>
+<p>Portrait</p>
+</div>
+</div>
+  
+<div class="col-12 col-sm-6 col-lg-3 single_gallery_item  portrait wow fadeInUpBig" data-wow-delay="500ms">
+<a class="gallery-portrait" href="img/portfolio-img/portrait/Projet_WEB_5.jpg"><img src="img/portfolio-img/portrait/Projet_WEB_5.jpg" alt></a>
+
+<div class="gallery-content">
+<h4>Child’s Play, Father’s Love</h4>
+<p>Portrait</p>
+</div>
+</div>
+  
+<div class="col-12 col-sm-6 col-lg-3 single_gallery_item studio portrait wow fadeInUpBig" data-wow-delay="500ms">
+<a class="gallery-portrait" href="img/portfolio-img/portrait/Projet_WEB_6.jpg"><img src="img/portfolio-img/portrait/Projet_WEB_6.jpg" alt></a>
+
+<div class="gallery-content">
+<h4>Modern & Professional</h4>
+<p>Portrait</p>
+</div>
+</div>
+  
+<div class="col-12 col-sm-6 col-lg-3 single_gallery_item  portrait wow fadeInUpBig" data-wow-delay="500ms">
+<a class="gallery-portrait" href="img/portfolio-img/portrait/Projet_WEB_7.jpg"><img src="img/portfolio-img/portrait/Projet_WEB_7.jpg" alt></a>
+
+<div class="gallery-content">
+<h4>Corporate in the Wild</h4>
+<p>Portrait</p>
+</div>
+</div>
+  
+<div class="col-12 col-sm-6 col-lg-3 single_gallery_item  portrait wow fadeInUpBig" data-wow-delay="500ms">
+<a class="gallery-portrait" href="img/portfolio-img/portrait/Projet_WEB_8.jpg"><img src="img/portfolio-img/portrait/Projet_WEB_8.jpg" alt></a>
+
+<div class="gallery-content">
+<h4>Where the Gaze Wanders</h4>
+<p>Portrait</p>
+</div>
+</div>
+  
+<div class="col-12 col-sm-6 col-lg-3 single_gallery_item  portrait wow fadeInUpBig" data-wow-delay="500ms">
+<a class="gallery-portrait" href="img/portfolio-img/portrait/Projet_WEB_9.jpg"><img src="img/portfolio-img/portrait/Projet_WEB_9.jpg" alt></a>
+
+<div class="gallery-content">
+<h4>Between Thought and Pause</h4>
+<p>Portrait</p>
+</div>
+</div>
+  
+<div class="col-12 col-sm-6 col-lg-3 single_gallery_item  portrait wow fadeInUpBig" data-wow-delay="500ms">
+<a class="gallery-portrait" href="img/portfolio-img/portrait/Projet_WEB_10.jpg"><img src="img/portfolio-img/portrait/Projet_WEB_10.jpg" alt></a>
+
+<div class="gallery-content">
+<h4>A Smile at the Summit</h4>
+<p>Portrait</p>
+</div>
+</div>
+  
+<div class="col-12 col-sm-6 col-lg-3 single_gallery_item  portrait wow fadeInUpBig" data-wow-delay="500ms">
+<a class="gallery-portrait" href="img/portfolio-img/portrait/Projet_WEB_11.jpg"><img src="img/portfolio-img/portrait/Projet_WEB_11.jpg" alt></a>
+
+<div class="gallery-content">
+<h4>Relaxed Confidence</h4>
+<p>Portrait</p>
+</div>
+</div>
+  
+<div class="col-12 col-sm-6 col-lg-3 single_gallery_item  portrait wow fadeInUpBig" data-wow-delay="500ms">
+<a class="gallery-portrait" href="img/portfolio-img/portrait/Projet_WEB_20.jpg"><img src="img/portfolio-img/portrait/Projet_WEB_20.jpg" alt></a>
+
+<div class="gallery-content">
+<h4>Ready for the Shot</h4>
+<p>Portrait</p>
+</div>
+</div>
+  
+<div class="col-12 col-sm-6 col-lg-3 single_gallery_item  portrait wow fadeInUpBig" data-wow-delay="500ms">
+<a class="gallery-portrait" href="img/portfolio-img/portrait/Projet_WEB_22.jpg"><img src="img/portfolio-img/portrait/Projet_WEB_22.jpg" alt></a>
+
+<div class="gallery-content">
+<h4>Silent Tenderness</h4>
+<p>Portrait</p>
+</div>
+</div>
+  
+<div class="col-12 col-sm-6 col-lg-3 single_gallery_item studio portrait wow fadeInUpBig" data-wow-delay="500ms">
+<a class="gallery-portrait" href="img/portfolio-img/portrait/Projet_WEB_23.jpg"><img src="img/portfolio-img/portrait/Projet_WEB_23.jpg" alt></a>
+
+<div class="gallery-content">
+<h4>Wrapped in Love</h4>
+<p>Portrait</p>
+</div>
+</div>
+  
+<div class="col-12 col-sm-6 col-lg-3 single_gallery_item studio portrait wow fadeInUpBig" data-wow-delay="500ms">
+<a class="gallery-portrait" href="img/portfolio-img/portrait/Projet_WEB_30.jpg"><img src="img/portfolio-img/portrait/Projet_WEB_30.jpg" alt></a>
+
+<div class="gallery-content">
+<h4>MAD Montreal Fashion Show 2024</h4>
+<p>Portrait</p>
+</div>
+</div>
+  
+<div class="col-12 col-sm-6 col-lg-3 single_gallery_item  portrait wow fadeInUpBig" data-wow-delay="500ms">
+<a class="gallery-portrait" href="img/portfolio-img/portrait/Projet_WEB_31.jpg"><img src="img/portfolio-img/portrait/Projet_WEB_31.jpg" alt></a>
+
+<div class="gallery-content">
+<h4>MAD Montreal Fashion Show 2024</h4>
+<p>Portrait</p>
+</div>
+</div>
+  
+<div class="col-12 col-sm-6 col-lg-3 single_gallery_item  portrait wow fadeInUpBig" data-wow-delay="500ms">
+<a class="gallery-portrait" href="img/portfolio-img/portrait/Projet_WEB_32.jpg"><img src="img/portfolio-img/portrait/Projet_WEB_32.jpg" alt></a>
+
+<div class="gallery-content">
+<h4>MAD Montreal Fashion Show 2024</h4>
+<p>Portrait</p>
+</div>
+</div>
+  
+<div class="col-12 col-sm-6 col-lg-3 single_gallery_item  portrait wow fadeInUpBig" data-wow-delay="500ms">
+<a class="gallery-portrait" href="img/portfolio-img/portrait/Projet_WEB_33.jpg"><img src="img/portfolio-img/portrait/Projet_WEB_33.jpg" alt></a>
+
+<div class="gallery-content">
+<h4>MAD Montreal Fashion Show 2024</h4>
+<p>Portrait</p>
+</div>
+</div>
+  
+<div class="col-12 col-sm-6 col-lg-3 single_gallery_item  portrait wow fadeInUpBig" data-wow-delay="500ms">
+<a class="gallery-portrait" href="img/portfolio-img/portrait/Projet_WEB_34.jpg"><img src="img/portfolio-img/portrait/Projet_WEB_34.jpg" alt></a>
+
+<div class="gallery-content">
+<h4>Suspense and Speed</h4>
+<p>Portrait</p>
+</div>
+</div>
+  
+<div class="col-12 col-sm-6 col-lg-3 single_gallery_item  portrait wow fadeInUpBig" data-wow-delay="500ms">
+<a class="gallery-portrait" href="img/portfolio-img/portrait/Projet_WEB_35.jpg"><img src="img/portfolio-img/portrait/Projet_WEB_35.jpg" alt></a>
+
+<div class="gallery-content">
+<h4>Extreme Balance</h4>
+<p>Portrait</p>
+</div>
+</div>
+  
+<div class="col-12 col-sm-6 col-lg-3 single_gallery_item  portrait wow fadeInUpBig" data-wow-delay="500ms">
+<a class="gallery-portrait" href="img/portfolio-img/portrait/Projet_WEB_36.jpg"><img src="img/portfolio-img/portrait/Projet_WEB_36.jpg" alt></a>
+
+<div class="gallery-content">
+<h4>Action and Focus</h4>
+<p>Portrait</p>
+</div>
+</div>
+  
+<div class="col-12 col-sm-6 col-lg-3 single_gallery_item  portrait wow fadeInUpBig" data-wow-delay="500ms">
+<a class="gallery-portrait" href="img/portfolio-img/portrait/Projet_WEB_37.jpg"><img src="img/portfolio-img/portrait/Projet_WEB_37.jpg" alt></a>
+
+<div class="gallery-content">
+<h4>Happy Bride n Groom</h4>
+<p>Portrait</p>
+</div>
+</div>
+  
+<div class="col-12 col-sm-6 col-lg-3 single_gallery_item  portrait wow fadeInUpBig" data-wow-delay="500ms">
+<a class="gallery-portrait" href="img/portfolio-img/portrait/Projet_WEB_38.jpg"><img src="img/portfolio-img/portrait/Projet_WEB_38.jpg" alt></a>
+
+<div class="gallery-content">
+<h4>Brilliance in Motion</h4>
+<p>Portrait</p>
+</div>
+</div>
+  
+<div class="col-12 col-sm-6 col-lg-3 single_gallery_item studio portrait wow fadeInUpBig" data-wow-delay="500ms">
+<a class="gallery-portrait" href="img/portfolio-img/portrait/Projet_WEB_40.jpg"><img src="img/portfolio-img/portrait/Projet_WEB_40.jpg" alt></a>
+
+<div class="gallery-content">
+<h4>Last Glows</h4>
+<p>Portrait</p>
+</div>
+</div>
+  
+<div class="col-12 col-sm-6 col-lg-3 single_gallery_item studio portrait wow fadeInUpBig" data-wow-delay="500ms">
+<a class="gallery-portrait" href="img/portfolio-img/portrait/Projet_WEB_41.jpg"><img src="img/portfolio-img/portrait/Projet_WEB_41.jpg" alt></a>
+
+<div class="gallery-content">
+<h4>Amber Look</h4>
+<p>Portrait</p>
+</div>
+</div>
+  
+<div class="col-12 col-sm-6 col-lg-3 single_gallery_item  portrait wow fadeInUpBig" data-wow-delay="500ms">
+<a class="gallery-portrait" href="img/portfolio-img/portrait/Projet_WEB_42.jpg"><img src="img/portfolio-img/portrait/Projet_WEB_42.jpg" alt></a>
+
+<div class="gallery-content">
+<h4>Quiet Hues</h4>
+<p>Portrait</p>
+</div>
+</div>
+  
+<div class="col-12 col-sm-6 col-lg-3 single_gallery_item  portrait wow fadeInUpBig" data-wow-delay="500ms">
+<a class="gallery-portrait" href="img/portfolio-img/portrait/Projet_WEB_43.jpg"><img src="img/portfolio-img/portrait/Projet_WEB_42.jpg" alt></a>
+
+<div class="gallery-content">
+<h4>Black Against Ochre</h4>
+<p>Portrait</p>
+</div>
+</div>
+  
 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item  landscape wow fadeInUpBig" data-wow-delay="700ms">
 <a class="gallery-landscape" href="img/portfolio-img/landscape/Photo1920_007728.jpg"><img src="img/portfolio-img/landscape/Photo1920_007728.jpg" alt></a>
 
