--- a/portfolio.html
+++ b/portfolio.html
@@ -640,8 +640,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 <a class="gallery-portrait" href="img/portfolio-img/portrait/Projet_WEB_28.jpg"><img src="img/portfolio-img/portrait/Projet_WEB_28.jpg" alt></a>
 
 <div class="gallery-content">
-<h4>Peaceful Horizons</h4>
-<p>Portrait</p>
+<h4>Ad for Tim Hortons</h4>
+<p>Culinary</p>
 </div>
   
 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item  landscape wow fadeInUpBig" data-wow-delay="700ms">
