--- a/portfolio.html
+++ b/portfolio.html
@@ -587,6 +587,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 <h4>Black Against Ochre</h4>
 <p>Portrait</p>
 </div>
+</div>
 
 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item  landscape wow fadeInUpBig" data-wow-delay="500ms">
 <a class="gallery-portrait" href="img/portfolio-img/portrait/Projet_WEB_17.jpg"><img src="img/portfolio-img/portrait/Projet_WEB_17.jpg" alt></a>
@@ -595,13 +596,15 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 <h4>Nature’s Orbit</h4>
 <p>Portrait</p>
 </div>
-
+</div>
+  
 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item  landscape wow fadeInUpBig" data-wow-delay="500ms">
 <a class="gallery-portrait" href="img/portfolio-img/portrait/Projet_WEB_18.jpg"><img src="img/portfolio-img/portrait/Projet_WEB_18.jpg" alt></a>
 
 <div class="gallery-content">
 <h4>Oxygen Bubble</h4>
 <p>Portrait</p>
+</div>
 </div>
   
 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item  landscape wow fadeInUpBig" data-wow-delay="500ms">
@@ -611,7 +614,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 <h4>Peaceful Horizons</h4>
 <p>Portrait</p>
 </div>
-
+</div>
+  
 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item  culinary wow fadeInUpBig" data-wow-delay="500ms">
 <a class="gallery-portrait" href="img/portfolio-img/portrait/Projet_WEB_24.jpg"><img src="img/portfolio-img/portrait/Projet_WEB_24.jpg" alt></a>
 
@@ -619,7 +623,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 <h4>Lemon Break</h4>
 <p>Culinary</p>
 </div>
-
+</div>
+  
 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item  culinary wow fadeInUpBig" data-wow-delay="500ms">
 <a class="gallery-portrait" href="img/portfolio-img/portrait/Projet_WEB_25.jpg"><img src="img/portfolio-img/portrait/Projet_WEB_25.jpg" alt></a>
 
@@ -635,13 +640,15 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 <h4>Rustic Break</h4>
 <p>Portrait</p>
 </div>
-
+</div>
+  
 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item studio culinary wow fadeInUpBig" data-wow-delay="500ms">
 <a class="gallery-portrait" href="img/portfolio-img/portrait/Projet_WEB_28.jpg"><img src="img/portfolio-img/portrait/Projet_WEB_28.jpg" alt></a>
 
 <div class="gallery-content">
 <h4>Ad for Tim Hortons</h4>
 <p>Culinary</p>
+</div>
 </div>
   
 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item  landscape wow fadeInUpBig" data-wow-delay="700ms">
