--- a/portfolio.html
+++ b/portfolio.html
@@ -632,6 +632,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 <h4>A Hint of Summer</h4>
 <p>Culinary</p>
 </div>
+</div>
 
 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item  culinary wow fadeInUpBig" data-wow-delay="500ms">
 <a class="gallery-portrait" href="img/portfolio-img/portrait/Projet_WEB_26.jpg"><img src="img/portfolio-img/portrait/Projet_WEB_26.jpg" alt></a>
