--- a/contactfr.html
+++ b/contactfr.html
@@ -120,7 +120,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Tous 
 
 <div class="hero-area d-flex align-items-center">
 
-<div class="hero-thumbnail equalize bg-img" style="background-image: url(img/bg-img/contact.jpg);"></div>
+<div class="hero-thumbnail equalize bg-img" style="background-image: url(img/bg-img/SonyA744.jpg);"></div>
 
 <div class="hero-content equalize">
 <div class="container-fluid h-100">
