--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 <div class="col-12">
 <div class="hero-slides-content">
 <div class="line"></div>
-<a href="portfolio_portrait.html#projects">
+<a href="portfolio.html?category=portrait">
 <h2>Portraits</h2 >
 <p>Discover a captivating collection of portraits, each capturing the unique essence of its subject. Through my artistic lens, I explore the human diversity in all its splendor.</p>
 </a>
@@ -142,7 +142,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 <div class="col-12">
 <div class="hero-slides-content">
 <div class="line"></div>
-<a href="portfolio_studio.html#projects">
+<a href="portfolio.html?category=studio">
 <h2>Studio</h2>
 <p>Explore the captivating world of the studio through my artistic creations. In this space dedicated to creativity and visual expression, each shot is meticulously composed and captured, revealing the very essence of my work. </p>
 </a>
@@ -158,7 +158,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 <div class="col-12">
 <div class="hero-slides-content">
 <div class="line"></div>
-<a id="Boxlink" href="portfolio_culinary.html#projects">
+<a href="portfolio.html?category=culinary">
 <h2>Culinairy</h2>
 <p>Join me on a visual journey through the rich textures, enticing aromas, and exquisite presentations that define the essence of culinary photography.</p>
 </a>
@@ -174,7 +174,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 <div class="col-12">
 <div class="hero-slides-content">
 <div class="line"></div>
-<a href="portfolio_landscape.html#projects">
+<a href="portfolio.html?category=landscape">
 <h2>Landscapes</h2>
 <p>Embark on a journey through breathtaking landscapes captured in my photography. From majestic mountains to tranquil seascapes, each image invites you to explore the beauty and serenity of our natural world.</p>
 </a>
@@ -190,7 +190,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 <div class="col-12">
 <div class="hero-slides-content">
 <div class="line"></div>
-<a href="portfolio_video.html#projects" >
+<a href="portfolio.html?category=video">
 <h2  >Videos</h2>
 <p > where captivating visual stories come to life. From cinematic narratives to dynamic showcases, each video project embodies creativity and innovation. Join me on a journey through moving images and immersive experiences that captivate, inspire, and engage.</p>
 </a>
@@ -206,7 +206,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 <div class="col-12">
 <div class="hero-slides-content">
 <div class="line"></div>
-<a href="portfolio_art.html#projects">
+<a href="portfolio.html#projects">
 <h2>My Artistic Projects</h2>
 <p>Through photography, I explore diverse themes, concepts, and narratives, expressing my creativity and vision. Each project is a journey of exploration and expression, offering unique perspectives and captivating imagery.</p>
 </a>
@@ -224,7 +224,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 <div class="row">
 <div class="col-12">
 <div class="portfolio-title">
-<h2>“In photography there is a reality so subtle that it becomes more <span>real</span> than reality.”</h2>
+<h2>"In photography there is a reality so subtle that it becomes more <span>real</span> than reality."</h2>
 </div>
 </div>
 </div>
@@ -366,7 +366,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 <div class="col-12">
 <div class="call-to-action-content wow fadeInUp" data-wow-delay="0.5s">
 <h2>I look forward to working with you</h2>
-<h5>Let’s talk</h5>
+<h5>Let's talk</h5>
 <a href="contact.html" class="btn sonar-btn mt-100">contact me</a>
 </div>
 </div>
