--- a/indexfr.html
+++ b/indexfr.html
@@ -121,8 +121,8 @@ Droits d'auteur &copy;<script>document.write(new Date().getFullYear());</script>
 <div class="col-12">
 <div class="hero-slides-content">
 <div class="line"></div>
-<a href="portfolio_portraitfr.html#projects">
-<h2>Portraits</h2 >
+<a href="portfoliofr.html?category=portrait">
+<h2>Portraits</h2>
 <p>Découvrez une collection captivante de portraits, chacun capturant l'essence unique de son sujet. À travers mon objectif artistique, j'explore la diversité humaine dans toute sa splendeur.</p>
 </a>
 </div>
@@ -138,7 +138,7 @@ Droits d'auteur &copy;<script>document.write(new Date().getFullYear());</script>
 <div class="col-12">
 <div class="hero-slides-content">
 <div class="line"></div>
-<a href="portfolio_studiofr.html#projects">
+<a href="portfoliofr.html?category=studio">
 <h2>Studio</h2>
 <p>Explorez le monde captivant du studio à travers mes créations artistiques. Dans cet espace dédié à la créativité et à l'expression visuelle, chaque prise de vue est méticuleusement composée et capturée, révélant l'essence même de mon travail.</p>
 </a>
@@ -154,9 +154,9 @@ Droits d'auteur &copy;<script>document.write(new Date().getFullYear());</script>
 <div class="col-12">
 <div class="hero-slides-content">
 <div class="line"></div>
-<a id="Boxlink" href="portfolio_culinaryfr.html#projects">
+<a href="portfoliofr.html?category=culinary">
 <h2>Culinaire</h2>
-<p>Joignez-vous à moi pour un voyage visuel à travers les textures riches, les arômes alléchants et les présentations exquises qui définissent l'essence de la photographie culinaire.</p>
+<p>Rejoignez-moi dans un voyage visuel à travers les textures riches, les arômes envoûtants et les présentations exquises qui définissent l'essence de la photographie culinaire.</p>
 </a>
 </div>
 </div>
@@ -170,9 +170,9 @@ Droits d'auteur &copy;<script>document.write(new Date().getFullYear());</script>
 <div class="col-12">
 <div class="hero-slides-content">
 <div class="line"></div>
-<a href="portfolio_landscapefr.html#projects">
+<a href="portfoliofr.html?category=landscape">
 <h2>Paysages</h2>
-<p>Embarquez pour un voyage à travers des paysages à couper le souffle capturés dans ma photographie. Des montagnes majestueuses aux paysages marins tranquilles, chaque image vous invite à explorer la beauté et la sérénité de notre monde naturel.</p>
+<p>Embarquez pour un voyage à travers des paysages à couper le souffle capturés dans ma photographie. Des montagnes majestueuses aux mers tranquilles, chaque image vous invite à explorer la beauté et la sérénité de notre monde naturel.</p>
 </a>
 </div>
 </div>
@@ -186,9 +186,9 @@ Droits d'auteur &copy;<script>document.write(new Date().getFullYear());</script>
 <div class="col-12">
 <div class="hero-slides-content">
 <div class="line"></div>
-<a href="portfolio_videofr.html#projects" >
+<a href="portfoliofr.html?category=video">
 <h2>Vidéos</h2>
-<p>où des histoires visuelles captivantes prennent vie. Des récits cinématographiques aux présentations dynamiques, chaque projet vidéo incarne la créativité et l'innovation. Rejoignez-moi dans un voyage à travers des images animées et des expériences immersives qui captivent, inspirent et engagent.</p>
+<p>où des histoires visuelles captivantes prennent vie. Des récits cinématographiques aux présentations dynamiques, chaque projet vidéo incarne la créativité et l'innovation. Rejoignez-moi dans un voyage à travers des images en mouvement et des expériences immersives qui captivent, inspirent et engagent.</p>
 </a>
 </div>
 </div>
@@ -202,7 +202,7 @@ Droits d'auteur &copy;<script>document.write(new Date().getFullYear());</script>
 <div class="col-12">
 <div class="hero-slides-content">
 <div class="line"></div>
-<a href="portfolio_artfr.html#projects">
+<a href="portfoliofr.html#projects" class="portfolio-link">
 <h2>Mes Projets Artistiques</h2>
 <p>À travers la photographie, j'explore des thèmes, des concepts et des récits divers, exprimant ma créativité et ma vision. Chaque projet est un voyage d'exploration et d'expression, offrant des perspectives uniques et des images captivantes.</p>
 </a>
@@ -221,7 +221,7 @@ Droits d'auteur &copy;<script>document.write(new Date().getFullYear());</script>
 <div class="row">
 <div class="col-12">
 <div class="portfolio-title">
-<h2>“En photographie, il y a une réalité si subtile qu'elle devient plus <span>réelle</span> que la réalité.”</h2>
+<h2>"En photographie, il y a une réalité si subtile qu'elle devient plus <span>réelle</span> que la réalité."</h2>
 </div>
 </div>
 </div>
@@ -367,6 +367,7 @@ Droits d'auteur &copy;<script>document.write(new Date().getFullYear());</script>
 <h2>Je suis impatient de travailler avec vous</h2>
 <h5>Parlons-en</h5>
 <a href="contactfr.html" class="btn sonar-btn mt-100">Me contacter</a>
+</div>
 </div>
 </div>
 </div>
