--- a/services.html
+++ b/services.html
@@ -130,7 +130,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 <p>Feel free to contact me to discuss your specific needs or for any additional information. I am looking forward to collaborating with you to create unforgettable memories!
 
 </p>
-<a href="contact.html" class="btn sonar-btn white-btn">contact me</a>
+<a href="contactfr.html" class="btn sonar-btn white-btn">contact me</a>
 </div>
 </div>
 </div>
@@ -292,7 +292,7 @@ uspendisse sit amet laoreet neque.</p>
 <div class="call-to-action-content">
 <h2>My rates are not fixed and also depend on the difficulty of the project</h2>
 <h5>For more details</h5>
-<a href="contact.html" class="btn sonar-btn mt-100">contact me</a>
+<a href="contactFr.html" class="btn sonar-btn mt-100">contact me</a>
 </div>
 </div>
 </div>
