--- a/indexfr.html
+++ b/indexfr.html
@@ -202,7 +202,7 @@ Droits d'auteur &copy;<script>document.write(new Date().getFullYear());</script>
 <div class="col-12">
 <div class="hero-slides-content">
 <div class="line"></div>
-<a href="portfoliofr.html#projects" class="portfolio-link">
+<a href="portfoliofr.html?category=art" class="portfolio-link">
 <h2>Mes Projets Artistiques</h2>
 <p>À travers la photographie, j'explore des thèmes, des concepts et des récits divers, exprimant ma créativité et ma vision. Chaque projet est un voyage d'exploration et d'expression, offrant des perspectives uniques et des images captivantes.</p>
 </a>
