--- a/portfoliofr.html
+++ b/portfoliofr.html
@@ -756,6 +756,7 @@
 </div>
         <div class="lightbox-controls">
             <button class="lightbox-control" id="lightbox-toggle"><i class="fa fa-play-circle"></i> Lancer le diaporama</button>
+            <button class="lightbox-control" id="lightbox-fullscreen"><i class="fa fa-expand"></i> Plein écran</button>
 </div>
 </div>
 
